--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string name="app_name_short">Skoob</string>
     <string name="app_name">Skoob Unofficial</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="welcome_text">Bem-vindo ao Skoob!</string>
+    <string name="instructions_login">Para utilizar o aplicativo, faça login com a sua conta do Skoob.</string>
+    <string name="loged_as">Você está logado como:</string>
+    <string name="login_name">Login (e-mail)</string>
+    <string name="login">Entrar</string>
+    <string name="logout">Sair</string>
+    <string name="password">Senha</string>
+    <string name="logging_in">Conectando…</string>
+    <string name="logging_out">Saindo...</string>
 
 </resources>
